# agentflow

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-validation.yml  release.yml  tests.yml
agentflow/: __init__.py
agentflow/agents/: __init__.py  agent.py
agentflow/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
agentflow/memory/: __init__.py  base.py  long_term.py  persistent.py  short_term.py
agentflow/observability/: __init__.py  logger.py  metrics.py  tracer.py
agentflow/orchestration/: __init__.py  supervisor.py
agentflow/tools/: __init__.py  base.py
agentflow/tools/builtin/: __init__.py  code_tools.py  file_tools.py  web_tools.py
examples/: async_agent.py  builtin_tools.py  memory_agent.py  multi_agent_team.py  observability_demo.py  ollama_agent.py  simple_agent.py
tests/: __init__.py  test_memory.py  test_observability.py  test_tools.py
